traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:6: error: not found: value x
      x = posSuivante(gauche,cote)
      ^TraversalZigZag:8: error: not found: value x
      gauche = x(0)
               ^TraversalZigZag:9: error: not found: value x
      cote = x(1)
             ^